--- a/trabalho meteriologia/src/index.html
+++ b/trabalho meteriologia/src/index.html
@@ -1,3 +1,7 @@
+
+Gemini
+Quero informações sobre esta pasta
+O Gemini no Workspace pode cometer erros. Por isso, cheque as respostas. Saiba mais
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -6,16 +10,38 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      background: #f0f8ff;
+      font-family: 'Roboto', sans-serif;
+      background: white;
       margin: 0;
       padding: 20px;
+      text-align: center;
     }
+
+    /*ficar a data do lado direito lá em cima*/
+    #horaData {
+      position: absolute;
+      top: 10px;
+      right: 20px;
+      text-align: right;
+      font-family: Arial, sans-serif;
+    }
+    #hora {
+      font-size: 24px;
+      font-weight: bold;
+    }
+    #data {
+      font-size: 18px;
+    }
+
+    h1 {
+      margin-top: 60px; /* espaçamento entre eles */
+    }
+
     h2 {
-      color: #333;
+      color: #000000;
       margin-top: 30px;
     }
+
     .forecast {
       display: flex;
       justify-content: center;
@@ -23,28 +49,39 @@
       margin-top: 20px;
       flex-wrap: wrap;
     }
+
     .card {
-      background: white;
-      padding: 15px;
-      border-radius: 10px;
-      box-shadow: 0 3px 6px rgba(0,0,0,0.1);
-      width: 120px;
+      background: #e0e0e0;
+    padding: 15px;
+    border-radius: 10px;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
+    width: 120px;
     }
+
     .card img {
       width: 50px;
       height: 50px;
     }
+
     #chartContainer {
       max-width: 800px;
       margin: 30px auto;
       background: white;
       padding: 20px;
       border-radius: 15px;
-      box-shadow: 0 3px 6px rgba(0,0,0,0.15);
+      box-shadow: 0 3px 6px rgba(0, 0, 0, 0.15);
     }
   </style>
 </head>
 <body>
+
+  <div id="horaData">
+    <div id="hora"></div>
+    <div id="data"></div>
+  </div>
+
+  <h1>Previsão do Tempo</h1>
+
   <h2>Previsão do dia em gráfico</h2>
   <div id="chartContainer">
     <canvas id="tempChart"></canvas>
@@ -54,18 +91,33 @@
   <div id="forecast" class="forecast"></div>
 
   <script>
+    function trocar() {
+      const agora = new Date();
+
+      // Hora
+      const hora = agora.getHours().toString().padStart(2, '0');
+      const minutos = agora.getMinutes().toString().padStart(2, '0');
+      document.getElementById("hora").innerText = `${hora}:${minutos}`;
+
+      // Data no formato: Ter. 30/09
+      const diasSemana = ["Dom.", "Seg.", "Ter.", "Qua.", "Qui.", "Sex.", "Sáb."];
+      const diaSemana = diasSemana[agora.getDay()];
+      const dia = agora.getDate().toString().padStart(2, "0");
+      const mes = (agora.getMonth() + 1).toString().padStart(2, "0");
+      document.getElementById("data").innerText = `${diaSemana} ${dia}/${mes}`;
+    }
+
+    setInterval(trocar, 1000);
+
     const apiKey = "aa393a8b9e39b77a435714a6f531baa8";
     const cidade = "Belo Horizonte";
 
     fetch(`https://api.openweathermap.org/data/2.5/forecast?q=${cidade}&appid=${apiKey}&lang=pt_br&units=metric`)
       .then(response => response.json())
       .then(data => {
-        console.log(data); // debug
-
         const forecastEl = document.getElementById("forecast");
         const daily = {};
 
-        // 🔹 Pegar previsões de hoje (primeiras 8 entradas = ~24h)
         const hoje = data.list.slice(0, 8);
         const horas = hoje.map(item => {
           const date = new Date(item.dt_txt);
@@ -73,7 +125,16 @@
         });
         const temps = hoje.map(item => item.main.temp.toFixed(1));
 
-        // Criar gráfico
+        let corGrafico;
+        const tempAtual = parseFloat(temps[0]);
+        if (tempAtual <= 15) {
+        corGrafico = { linha: "#00BFFF", fundo: "rgba(0,191,255,0.3)" }; 
+        } else if (tempAtual <= 25) {
+        corGrafico = { linha: "#28a745", fundo: "rgba(40,167,69,0.3)" }; 
+        } else {
+        corGrafico = { linha: "#FFA500", fundo: "rgba(255,165,0,0.3)" };
+        }
+
         const ctx = document.getElementById("tempChart").getContext("2d");
         new Chart(ctx, {
           type: "line",
@@ -82,25 +143,20 @@
             datasets: [{
               label: "Temperatura (°C)",
               data: temps,
-              borderColor: "#007bff",
-              backgroundColor: "rgba(0, 123, 255, 0.3)",
+              borderColor: corGrafico.linha,
+              backgroundColor: corGrafico.fundo,
               tension: 0.3,
               fill: true,
               pointRadius: 5,
-              pointBackgroundColor: "#007bff"
+              pointBackgroundColor: corGrafico.linha
             }]
           },
           options: {
             responsive: true,
             plugins: {
-              legend: {
-                display: true,
-                labels: { color: "#333" }
-              },
+              legend: { display: true, labels: { color: "#333" } },
               tooltip: {
-                callbacks: {
-                  label: (context) => `${context.raw}°C`
-                }
+                callbacks: { label: (context) => `${context.raw}°C` }
               }
             },
             scales: {
@@ -110,7 +166,6 @@
           }
         });
 
-        // 🔹 Previsão diária (5 dias)
         data.list.forEach(item => {
           const date = new Date(item.dt_txt);
           const day = date.toLocaleDateString("pt-BR", { weekday: "short", day: "numeric" });
@@ -127,15 +182,16 @@
           const d = daily[day];
           forecastEl.innerHTML += `
             <div class="card">
-              <h3>${day}</h3>
+              <h3>${day.charAt(0).toUpperCase() + day.slice(1)}</h3>
               <img src="https://openweathermap.org/img/wn/${d.icon}@2x.png" alt="${d.desc}">
               <p>${d.temp}°C</p>
-              <p>${d.desc}</p>
+              <p>${d.desc.charAt(0).toUpperCase() + d.desc.slice(1)}</p>
             </div>
           `;
         });
       })
       .catch(error => console.error("Erro ao buscar previsão:", error));
   </script>
+
 </body>
 </html>
